--- a/_VSPG/samples/Team-Postbuild8.bat.sample
+++ b/_VSPG/samples/Team-Postbuild8.bat.sample
@@ -6,6 +6,9 @@ REM <this>.bat $(SolutionDir) $(ProjectDir) $(BuildConf) $(PlatformName) $(Targe
 set batfilenam=%~n0%~x0
 set batdir=%~dp0
 set batdir=%batdir:~0,-1%
+set _vspgINDENTS=%_vspgINDENTS%.
+call :Echos START from %batdir%
+
 
 REM _SolutionDir_ has double-quotes around, SolutionDir has no quotes.
 set _SolutionDir_=%1&set SolutionDir=%~1
@@ -27,8 +30,6 @@ REM call :EchoVar TargetDir
 REM call :EchoVar PlatformName
 REM call :EchoVar TargetName
 
-call :Echos START from %batdir%
-
 REM ==== Prelude Above ====
 
 
@@ -46,30 +47,31 @@ if errorlevel 1 exit /b 4
 
 
 
-goto :END
+exit /b 0
 
 REM =============================
 REM ====== Functions Below ======
 REM =============================
 
-REM %~n0%~x0 is batfilenam
 :Echos
-  echo [%~n0%~x0] %*
-exit /b
+  REM This function preserves %ERRORLEVEL% for the caller,
+  REM and, LastError does NOT pollute the caller.
+  setlocal & set LastError=%ERRORLEVEL%
+  echo %_vspgINDENTS%[%batfilenam%] %*
+exit /b %LastError%
 
-:EchoExec
-  echo [%~n0%~x0] EXEC: %*
-exit /b
+:EchoAndExec
+  echo %_vspgINDENTS%[%batfilenam%] EXEC: %*
+  %*
+exit /b %ERRORLEVEL%
 
 :EchoVar
-  REM Env-var double expansion trick from: https://stackoverflow.com/a/1200871/151453
-  set _Varname=%1
-  for /F %%i in ('echo %_Varname%') do echo [%batfilenam%] %_Varname% = !%%i!
-exit /b
+  setlocal & set Varname=%~1
+  call echo %_vspgINDENTS%[%batfilenam%] %Varname% = %%%Varname%%%
+exit /b 0
 
 :SetErrorlevel
   REM Usage example:
   REM call :SetErrorlevel 4
 exit /b %1
 
-:END
