--- a/InterfaceEnum/InterfaceEnum_vs2019/InterfaceEnum_vs2019.vcxproj
+++ b/InterfaceEnum/InterfaceEnum_vs2019/InterfaceEnum_vs2019.vcxproj
@@ -30,6 +30,7 @@
     <Keyword>Win32Proj</Keyword>
     <ProjectGuid>{20220115-0000-0000-0000-144046000000}</ProjectGuid>
     <ProjectName>InterfaceEnum</ProjectName>
+    <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)'=='Debug'" Label="Configuration">
@@ -41,6 +42,9 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <CharacterSet>Unicode</CharacterSet>
+  </PropertyGroup>
+  <PropertyGroup Label="Configuration">
+    <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
